<?xml version="1.0"?>
<package format="2">
    <name>logger</name>
    <version>0.0.0</version>
    <description> logger </description>
    <maintainer email="rkzdtc@gmail.com">Kunzhao Ren</maintainer>
    <license>BSD</license>

    <!-- <buildtool_depend>catkin</buildtool_depend> -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>rosidl_runtime_py</exec_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
